deployment/base/maas-api/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-api
spec:
  selector:
    app.kubernetes.io/name: maas-api
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: https-metrics
    protocol: TCP
  type: ClusterIP
